EXEOCOMMONS-3 dodanie testow integracyjnych mongodb pokrycie 100%